--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,24 +12,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/constraintLayout">
-        <Button
-                android:text="RETRY"
-                android:onClick="refreshPage"
-                android:visibility="invisible"
-                android:textColor="@android:color/holo_orange_dark"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/btnRetry"
-                android:textAlignment="center"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="341dp"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="161dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="162dp"
-                android:layout_marginBottom="342dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:backgroundTint="@color/colorPrimary"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
     <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
@@ -39,10 +21,14 @@
             android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/recycler"/>
-    <androidx.recyclerview.widget.RecyclerView
+
+    <FrameLayout
+            android:id="@+id/fragment_container"
             android:layout_marginTop="?attr/actionBarSize"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" android:id="@+id/recycler"/>
+            android:layout_marginBottom="?attr/actionBarSize"
+            android:layout_width="match_parent" android:layout_height="match_parent">
+
+    </FrameLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/nav_view"
@@ -56,15 +42,5 @@
             app:layout_constraintRight_toRightOf="parent"
             app:menu="@menu/bottom_nav_menu">
     </com.google.android.material.bottomnavigation.BottomNavigationView>
-    <ProgressBar
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:id="@+id/progressBar"
-            android:layout_centerHorizontal="true"
-            android:visibility="invisible"
-            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
-            app:layout_constraintEnd_toEndOf="@+id/constraintLayout" android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/nav_view"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/recycler"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
