--- a/app/src/main/res/layout/card_holder.xml
+++ b/app/src/main/res/layout/card_holder.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
+              android:layout_marginRight="5dp"
+              android:layout_marginLeft="5dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
 
@@ -38,17 +40,18 @@
 
             <TextView
                     android:text="This is a description of the type of hotel you traveled to"
+                    android:overScrollMode="ifContentScrolls"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content" android:id="@+id/cardDescription"
                     app:layout_constraintTop_toBottomOf="@+id/cardTitle" app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/cardImageView"
                     android:layout_marginStart="8dp" android:textSize="18sp"/>
             <TextView
-                    android:text="6900"
+                    android:text="KES 2300 - 5000"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/textPrice"
                     app:layout_constraintTop_toBottomOf="@+id/cardDescription"
-                    android:textSize="20sp" android:layout_marginTop="8dp"
+                    android:textSize="16sp" android:layout_marginTop="8dp"
                     android:textAlignment="center"
                     android:textColor="@color/colorPrimary"
                     app:layout_constraintStart_toEndOf="@+id/cardImageView"/>
