--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,12 +8,19 @@
 
     <item
             android:id="@+id/navigation_favorites"
+            android:iconTint="@android:color/holo_orange_dark"
             android:icon="@drawable/ic_fave"
-            android:title="My Favorites"/>
+            android:title="Favorites"/>
 
     <item
             android:id="@+id/navigation_reviews"
+            android:iconTint="@android:color/holo_green_light"
             android:icon="@drawable/ic_notifications_black_24dp"
             android:title="Reviews"/>
+
+    <item
+            android:id="@+id/navigation_services"
+            android:icon="@drawable/ic_shopping_cart"
+            android:title="Services"/>
 
 </menu>
