add get All row parser

--- a/app/src/main/res/layout/activity_place_detail.xml
+++ b/app/src/main/res/layout/activity_place_detail.xml
@@ -66,6 +66,7 @@
                                 android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintHorizontal_bias="0.106"/>
                         <ImageView
+                                android:onClick="favorite"
                                 android:layout_gravity="center_horizontal"
                                 android:tint="@color/colorAccent"
                                 android:layout_height="36dp"
