--- a/app/src/main/res/menu/activity_detail_bottom_nav_menu.xml
+++ b/app/src/main/res/menu/activity_detail_bottom_nav_menu.xml
@@ -1,22 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-            android:id="@+id/navigation_explore"
+            android:id="@+id/navigation_place"
             android:icon="@drawable/ic_explore"
+            app:showAsAction="withText"
             android:title="Share"/>
 
     <item
-            android:id="@+id/navigation_favorites"
+            android:id="@+id/navigation_share"
+            android:icon="@drawable/ic_explore"
+            app:showAsAction="withText"
+            android:title="Share"/>
+
+    <item
+            android:id="@+id/navigation_guide"
+            app:showAsAction="withText"
             android:icon="@drawable/ic_compare_arrows"
-            android:title="Book Guide"/>
+            android:title="Get Guide"/>
 
     <item
             android:id="@+id/navigation_reviews"
+            app:showAsAction="withText"
             android:icon="@drawable/ic_stars"
             android:title="Reviews"/>
-    <item
-            android:id="@+id/navigation_admin"
-            android:icon="@drawable/ic_dashboard_black_24dp"
-            android:title="Admin"/>
 </menu>
