--- a/app/src/main/res/layout/card_fave.xml
+++ b/app/src/main/res/layout/card_fave.xml
@@ -70,7 +70,7 @@
                     android:text="TextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/textUpvote"
-                    app:layout_constraintEnd_toStartOf="@+id/downvoteImageView"
+                    app:layout_constraintEnd_toStartOf="@+id/textfoundNotUseful"
                     android:layout_marginEnd="8dp"
                     tools:text="203" android:textSize="8sp" android:layout_marginTop="36dp"
                     app:layout_constraintTop_toBottomOf="@+id/cardDescription" android:layout_marginBottom="17dp"
@@ -79,8 +79,8 @@
                     android:text="TextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/textDownvote"
-                    app:layout_constraintStart_toEndOf="@+id/downvoteImageView"
-                    android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/downvoteImageView"
+                    app:layout_constraintStart_toEndOf="@+id/textfoundNotUseful"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/textfoundNotUseful"
                     android:layout_marginEnd="8dp"
                     app:layout_constraintHorizontal_bias="0.0" tools:text="19"
                     android:textSize="8sp" android:layout_marginTop="36dp"
