--- a/app/src/main/res/layout/card_holder.xml
+++ b/app/src/main/res/layout/card_holder.xml
@@ -59,11 +59,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_thumb_down"
-                    android:id="@+id/downvoteImageView"
+                    android:id="@+id/textfoundNotUseful"
                     android:layout_marginTop="40dp"
                     app:layout_constraintTop_toBottomOf="@+id/cardDescription"
                     android:layout_marginStart="31dp"
-                    app:layout_constraintStart_toEndOf="@+id/upvoteImageView"
+                    app:layout_constraintStart_toEndOf="@+id/imageDownVote"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="47dp"
                     android:tint="@color/colorAccent"
@@ -72,8 +72,8 @@
                     android:text="TextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/textUpvote"
-                    app:layout_constraintStart_toEndOf="@+id/upvoteImageView"
-                    android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/downvoteImageView"
+                    app:layout_constraintStart_toEndOf="@+id/imageDownVote"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/textfoundNotUseful"
                     android:layout_marginEnd="8dp"
                     app:layout_constraintHorizontal_bias="0.333"
                     tools:text="203" android:textSize="8sp" android:layout_marginTop="36dp"
@@ -83,12 +83,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_thumb_up"
-                    android:id="@+id/upvoteImageView"
+                    android:id="@+id/imageDownVote"
                     android:layout_marginTop="40dp"
                     app:layout_constraintTop_toBottomOf="@+id/cardDescription"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="285dp"
-                    app:layout_constraintEnd_toStartOf="@+id/downvoteImageView"
+                    app:layout_constraintEnd_toStartOf="@+id/textfoundNotUseful"
                     android:layout_marginEnd="31dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     android:tint="#527A3C"/>
@@ -96,8 +96,8 @@
                     android:text="TextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/textDownvote"
-                    app:layout_constraintStart_toEndOf="@+id/downvoteImageView"
-                    android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/downvoteImageView"
+                    app:layout_constraintStart_toEndOf="@+id/textfoundNotUseful"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/textfoundNotUseful"
                     android:layout_marginEnd="8dp"
                     app:layout_constraintHorizontal_bias="0.0" tools:text="19"
                     android:textSize="8sp" android:layout_marginTop="36dp"
