--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -3,6 +3,19 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".fragments.ExploreFragment">
+    <androidx.cardview.widget.CardView android:layout_width="match_parent"
+                                       app:layout_goneMarginTop="?attr/actionBarSize"
+                                       android:id="@+id/errorMessageCard"
+                                       android:visibility="invisible"
+                                       android:layout_height="200dp" app:layout_constraintTop_toTopOf="parent"
+                                       app:layout_constraintStart_toStartOf="parent"
+                                       app:layout_constraintEnd_toEndOf="parent"
+                                       app:layout_constraintBottom_toTopOf="@+id/btnRetry"
+                                       android:layout_marginBottom="8dp" android:layout_marginTop="24dp">
+        <TextView android:layout_width="match_parent"
+                  android:text="An error occured while fetching data. Please check internet and try again"
+                  android:layout_height="match_parent"/>
+    </androidx.cardview.widget.CardView>
     <Button
             android:text="RETRY"
             android:onClick="refreshPage"
@@ -13,14 +26,15 @@
             android:id="@+id/btnRetry"
             android:textAlignment="center"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="341dp"
+            android:layout_marginTop="441dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="161dp"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="162dp"
             android:layout_marginBottom="342dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:backgroundTint="@color/colorPrimary"/>
+            android:backgroundTint="@color/colorPrimary" app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="1.0"/>
 
     <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
@@ -28,7 +42,7 @@
     <ProgressBar
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:id="@+id/progressBar"
+            android:id="@+id/exploreProgressBar"
             android:layout_centerHorizontal="true"
             android:visibility="invisible"
             app:layout_constraintStart_toStartOf="parent"
