--- a/app/src/main/res/layout/fragment_place_detail.xml
+++ b/app/src/main/res/layout/fragment_place_detail.xml
@@ -2,11 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                    android:padding="16dp"
-                                                   android:layout_marginTop="?attr/actionBarSize"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".fragments.PlaceDetailFragment">
-
     <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -44,7 +42,7 @@
                             android:text="About"
                             android:scrollbars="vertical"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" android:id="@+id/textContentDetailTitle"
+                            android:layout_height="wrap_content" android:id="@+id/textContentTitle"
                             android:textAlignment="center" android:textSize="30sp"
                             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -52,7 +50,7 @@
                             android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintHorizontal_bias="0.106"/>
                     <ImageView
-                            android:onClick="favorite"
+                            android:onClick="favoritePlace"
                             android:layout_gravity="center_horizontal"
                             android:tint="@color/colorAccent"
                             android:layout_height="36dp"
@@ -76,14 +74,13 @@
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
                     android:src="@android:drawable/divider_horizontal_bright"/>
-
             <View
                     android:layout_width="fill_parent"
                     android:layout_height="1dip"
                     android:background="#000000"/>
-
             <TextView
                     android:text="content"
+                    android:scrollbars = "vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/textPlaceContent"
@@ -94,5 +91,4 @@
             />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-
     </androidx.constraintlayout.widget.ConstraintLayout>
