--- a/app/src/main/res/menu/activity_detail_bottom_nav_menu.xml
+++ b/app/src/main/res/menu/activity_detail_bottom_nav_menu.xml
@@ -3,15 +3,9 @@
 
     <item
             android:id="@+id/navigation_place"
-            android:icon="@drawable/ic_explore"
+            android:icon="@drawable/ic_assignment"
             app:showAsAction="withText"
-            android:title="Share"/>
-
-    <item
-            android:id="@+id/navigation_share"
-            android:icon="@drawable/ic_explore"
-            app:showAsAction="withText"
-            android:title="Share"/>
+            android:title="Place"/>
 
     <item
             android:id="@+id/navigation_guide"
