add resource icons

--- a/app/src/main/res/layout/review_card_holder.xml
+++ b/app/src/main/res/layout/review_card_holder.xml
@@ -41,7 +41,7 @@
                         android:text="Just amazing!"
                         android:textAlignment="textStart"
                         android:textColor="@color/colorPrimary"
-                        android:textSize="16dp"
+                        android:textSize="14dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" android:id="@+id/cardTitle"
                         app:layout_constraintStart_toEndOf="@+id/cardImageView" android:layout_marginStart="8dp"
@@ -55,7 +55,7 @@
                     android:overScrollMode="ifContentScrolls"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content" android:id="@+id/cardDescription"
-                    android:textSize="18sp"
+                    android:textSize="14sp"
                     android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                     android:layout_marginBottom="32dp" app:layout_constraintStart_toEndOf="@+id/cardImageView"
@@ -74,7 +74,7 @@
             <ImageView
                     android:layout_width="28dp"
                     android:layout_height="20dp"
-                    android:src="@drawable/ic_arrow_down_black_24dp"
+                    android:src="@drawable/ic_arrow_down"
                     android:id="@+id/imageDownVote"
                     android:layout_marginTop="40dp"
                     app:layout_constraintTop_toBottomOf="@+id/cardDescription"
@@ -109,7 +109,7 @@
             <ImageView
                     android:layout_width="24dp"
                     android:layout_height="21dp"
-                    android:src="@drawable/ic_arrow_up_black_24dp"
+                    android:src="@drawable/ic_arrow_up"
                     android:id="@+id/imageDowvote"
                     android:layout_marginTop="40dp"
                     app:layout_constraintTop_toBottomOf="@+id/cardDescription"
