--- a/app/src/main/res/layout/card_fave.xml
+++ b/app/src/main/res/layout/card_fave.xml
@@ -45,16 +45,18 @@
                     android:layout_height="wrap_content" android:id="@+id/cardDescription"
                     app:layout_constraintTop_toBottomOf="@+id/cardTitle" app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/cardImageView"
-                    android:layout_marginStart="8dp" android:textSize="18sp"/>
+                    android:layout_marginStart="8dp" android:textSize="10sp"/>
             <TextView
-                    android:text="KES 2300 - 5000"
+                    android:text="Approx: 3400 - 29000"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/textPrice"
                     app:layout_constraintTop_toBottomOf="@+id/cardDescription"
                     android:textSize="16sp" android:layout_marginTop="8dp"
                     android:textAlignment="center"
                     android:textColor="@color/colorPrimary"
-                    app:layout_constraintStart_toEndOf="@+id/cardImageView"/>
+                    app:layout_constraintStart_toEndOf="@+id/cardImageView" android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"
+                    android:layout_marginStart="10dp"/>
             <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
