--- a/app/src/main/res/layout/card_holder.xml
+++ b/app/src/main/res/layout/card_holder.xml
@@ -30,7 +30,7 @@
             <TextView
                     android:text="Happy Park"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="24dp"
+                    android:textSize="20dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/cardTitle"
                     app:layout_constraintStart_toEndOf="@+id/cardImageView" android:layout_marginStart="8dp"
@@ -45,18 +45,18 @@
                     android:layout_height="wrap_content" android:id="@+id/cardDescription"
                     app:layout_constraintTop_toBottomOf="@+id/cardTitle" app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/cardImageView"
-                    android:layout_marginStart="8dp" android:textSize="18sp"/>
+                    android:layout_marginStart="8dp" android:textSize="28dp"/>
             <TextView
-                    android:text="KES 2300 - 5000"
+                    android:text="Approx: KES 2300 - 5000"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/textPrice"
                     app:layout_constraintTop_toBottomOf="@+id/cardDescription"
-                    android:textSize="16sp" android:layout_marginTop="8dp"
+                    android:textSize="16sp" android:layout_marginTop="44dp"
                     android:textAlignment="center"
                     android:textColor="@color/colorPrimary"
-                    app:layout_constraintStart_toEndOf="@+id/cardImageView"/>
+                    app:layout_constraintStart_toEndOf="@+id/cardImageView" android:layout_marginStart="16dp"/>
             <ImageView
-                    android:layout_width="wrap_content"
+                    android:layout_width="20sp"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_thumb_down"
                     android:id="@+id/textfoundNotUseful"
@@ -69,7 +69,7 @@
                     android:tint="@color/colorAccent"
             />
             <TextView
-                    android:text="TextView"
+                    android:text="124"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/textUpvote"
                     app:layout_constraintStart_toEndOf="@+id/imageDownVote"
@@ -80,7 +80,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/cardDescription" android:layout_marginBottom="17dp"
                     app:layout_constraintBottom_toBottomOf="parent"/>
             <ImageView
-                    android:layout_width="wrap_content"
+                    android:layout_width="20sp"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_thumb_up"
                     android:id="@+id/imageDownVote"
@@ -93,7 +93,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     android:tint="#527A3C"/>
             <TextView
-                    android:text="TextView"
+                    android:text="12"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/textDownvote"
                     app:layout_constraintStart_toEndOf="@+id/textfoundNotUseful"
