--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -40,7 +40,7 @@
     <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Reviewa heres" tools:listitem="@layout/review_card_holder"
+            android:text="Review's loading" tools:listitem="@layout/review_card_holder"
             android:id="@+id/recyclerView"/>
 
     <ProgressBar
@@ -53,5 +53,7 @@
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
             app:layout_constraintEnd_toEndOf="@+id/recyclerView" android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp" android:layout_marginTop="8dp"/>
+            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+            android:indeterminateDrawable="@drawable/inde"
+    />
 </androidx.constraintlayout.widget.ConstraintLayout>
