--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,7 +3,7 @@
 
     <item
             android:id="@+id/navigation_explore"
-            android:icon="@drawable/ic_home_black_24dp"
+            android:icon="@drawable/ic_whatshot"
             app:showAsAction="withText"
             android:title="Explore"/>
 
@@ -13,13 +13,6 @@
             android:iconTint="@android:color/holo_orange_dark"
             android:icon="@drawable/ic_fave"
             android:title="Favorites"/>
-
-    <item
-            android:id="@+id/navigation_reviews"
-            app:showAsAction="withText"
-            android:iconTint="@android:color/holo_green_light"
-            android:icon="@drawable/ic_notifications_black_24dp"
-            android:title="Reviews"/>
 
     <item
             android:id="@+id/navigation_services"
