--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -3,38 +3,42 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".fragments.ExploreFragment">
-    <androidx.cardview.widget.CardView android:layout_width="match_parent"
-                                       app:layout_goneMarginTop="?attr/actionBarSize"
-                                       android:id="@+id/errorMessageCard"
-                                       android:visibility="invisible"
-                                       android:layout_height="200dp" app:layout_constraintTop_toTopOf="parent"
-                                       app:layout_constraintStart_toStartOf="parent"
-                                       app:layout_constraintEnd_toEndOf="parent"
-                                       app:layout_constraintBottom_toTopOf="@+id/btnRetry"
-                                       android:layout_marginBottom="8dp" android:layout_marginTop="24dp">
-        <TextView android:layout_width="match_parent"
-                  android:text="An error occured while fetching data. Please check internet and try again"
-                  android:layout_height="match_parent"/>
-    </androidx.cardview.widget.CardView>
-    <Button
-            android:text="RETRY"
-            android:onClick="refreshPage"
+
+    <androidx.cardview.widget.CardView
+            android:id="@+id/errorMessageCard"
             android:visibility="invisible"
-            android:textColor="@android:color/holo_orange_dark"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/btnRetry"
-            android:textAlignment="center"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="441dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="161dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="162dp"
-            android:layout_marginBottom="342dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:backgroundTint="@color/colorPrimary" app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintVertical_bias="1.0"/>
+            app:layout_constraintBottom_toBottomOf="@+id/recycler"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="@+id/recycler"
+            app:layout_constraintEnd_toEndOf="@+id/recycler" android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="@+id/recycler">
+
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_gravity="center"
+                android:layout_height="match_parent">
+            <TextView android:layout_width="match_parent"
+                      android:id="@+id/textErrorDescription"
+                      android:padding="24dp"
+                      android:text="An error occured while fetching data. Please check internet and try again"
+                      android:layout_height="wrap_content"
+            />
+            <Button
+                    android:text="RETRY"
+                    android:onClick="refreshExplorePage"
+                    android:textColor="@android:color/holo_orange_dark"
+                    android:layout_width="wrap_content"
+                    android:layout_marginLeft="244dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/btnRetry"
+                    android:textAlignment="center"
+                    android:backgroundTint="@color/cardview_dark_background"
+            />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
