--- a/app/src/main/res/layout/fragment_guide.xml
+++ b/app/src/main/res/layout/fragment_guide.xml
@@ -1,15 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".fragments.GuideFragment">
 
-<androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <androidx.cardview.widget.CardView
+            android:id="@+id/errorMessageCard"
+            android:visibility="invisible"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@+id/recycler"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="@+id/recycler"
+            app:layout_constraintEnd_toEndOf="@+id/recycler" android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="@+id/recycler">
 
-</androidx.recyclerview.widget.RecyclerView>
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_gravity="center"
+                android:layout_height="match_parent">
+            <TextView android:layout_width="match_parent"
+                      android:id="@+id/textErrorDescription"
+                      android:padding="24dp"
+                      android:text="An error occured while fetching data. Please check internet and try again"
+                      android:layout_height="wrap_content"
+            />
+            <Button
+                    android:text="RETRY"
+                    android:onClick="refreshGuidePage"
+                    android:textColor="@android:color/holo_orange_dark"
+                    android:layout_width="wrap_content"
+                    android:layout_marginLeft="244dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/btnRetry"
+                    android:textAlignment="center"
+                    android:backgroundTint="@color/cardview_dark_background"
+            />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/guideRecycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" tools:listitem="@layout/card_agent_holder">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+    <ProgressBar
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:id="@+id/progressBar"
+            android:layout_centerHorizontal="true"
+            android:visibility="invisible"
+            android:layout_marginTop="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/errorMessageCard"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
