--- a/app/src/main/res/layout/card_holder.xml
+++ b/app/src/main/res/layout/card_holder.xml
@@ -63,7 +63,7 @@
                     android:layout_marginTop="40dp"
                     app:layout_constraintTop_toBottomOf="@+id/cardDescription"
                     android:layout_marginStart="31dp"
-                    app:layout_constraintStart_toEndOf="@+id/imageDownVote"
+                    app:layout_constraintStart_toEndOf="@+id/imageUpVote"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="47dp"
                     android:tint="@color/colorAccent"
@@ -72,7 +72,7 @@
                     android:text="124"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/textUpvote"
-                    app:layout_constraintStart_toEndOf="@+id/imageDownVote"
+                    app:layout_constraintStart_toEndOf="@+id/imageUpVote"
                     android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/textfoundNotUseful"
                     android:layout_marginEnd="8dp"
                     app:layout_constraintHorizontal_bias="0.333"
@@ -83,7 +83,7 @@
                     android:layout_width="20sp"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_thumb_up"
-                    android:id="@+id/imageDownVote"
+                    android:id="@+id/imageUpVote"
                     android:layout_marginTop="40dp"
                     app:layout_constraintTop_toBottomOf="@+id/cardDescription"
                     app:layout_constraintStart_toStartOf="parent"
