--- a/app/src/main/res/layout/fragment_services.xml
+++ b/app/src/main/res/layout/fragment_services.xml
@@ -5,10 +5,57 @@
              android:layout_height="match_parent"
              tools:context=".fragments.ServicesFragment">
 
-<androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <androidx.cardview.widget.CardView
+            android:id="@+id/errorMessageCard"
+            android:visibility="invisible"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="80dp"
+    >
 
-</androidx.recyclerview.widget.RecyclerView>
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+            <TextView android:layout_width="match_parent"
+                      android:id="@+id/textErrorDescription"
+                      android:padding="24dp"
+                      android:text="An error occured while fetching data. Please check internet and try again"
+                      android:layout_height="wrap_content"
+            />
+            <Button
+                    android:text="RETRY"
+                    android:onClick="refreshServicesPage"
+                    android:textColor="@android:color/holo_orange_dark"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/btnRetry"
+                    android:textAlignment="center"
+                    android:layout_marginStart="161dp"
+                    android:layout_marginEnd="162dp"
+                    android:layout_marginBottom="342dp"
+                    android:backgroundTint="@color/colorPrimary"
+                    android:layout_marginTop="8dp"
+            />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/servicesRecycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" tools:listitem="@layout/review_card_holder">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+    <ProgressBar
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:id="@+id/progressBar"
+            android:layout_centerHorizontal="true"
+            android:visibility="invisible"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+            android:indeterminateDrawable="@drawable/inde"/>
 
 </FrameLayout>
