--- a/app/src/main/res/layout/review_card_holder.xml
+++ b/app/src/main/res/layout/review_card_holder.xml
@@ -31,12 +31,63 @@
             <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="0dp"
+                    android:layout_height="match_parent" app:layout_constraintTop_toBottomOf="@+id/contentLinearLayout"
+                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintStart_toEndOf="@+id/cardImageView"
+                    app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
+                    android:id="@+id/bottomLinearLAyout">
+                <ImageView
+                        android:layout_width="28dp"
+                        android:layout_height="20dp"
+                        android:src="@drawable/ic_arrow_up"
+                        android:id="@+id/reviewImageUpVote"
+                        android:tint="#527A3C"
+                />
+                <TextView
+                        android:text="0"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" android:id="@+id/textUpvote"
+                        android:layout_marginStart="8dp"
+                        tools:text="239" android:textSize="8sp"
+                />
+                <ImageView
+                        android:layout_width="28dp"
+                        android:layout_height="20dp"
+                        android:src="@drawable/ic_arrow_down"
+                        android:id="@+id/reviewImageDownVote"
+                        android:tint="@color/colorAccent"
+                />
+                <TextView
+                        android:text="0"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" android:id="@+id/textDownvote"
+                        tools:text="19"
+                        android:textSize="8sp"
+                        android:layout_marginStart="8dp"/>
+                <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/ic_visibility"
+                        android:id="@+id/photosLink"
+                        android:tint="#527A3C"
+                        android:layout_marginStart="120dp"/>
+            </LinearLayout>
+            <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     app:layout_constraintStart_toEndOf="@+id/cardImageView"
-                    android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="58dp"
-                    android:id="@+id/linearLayout" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:id="@+id/contentLinearLayout"
+                    app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp">
+                <LinearLayout
+                        android:orientation="horizontal"
+                        android:id="@+id/startsLinearLayout"
+                        android:layout_width="match_parent" android:layout_height="wrap_content">
+
+                </LinearLayout>
                 <TextView
                         android:text="Just amazing!"
                         android:textAlignment="textStart"
@@ -48,77 +99,17 @@
                         app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toTopOf="@+id/cardDescription"/>
+                <TextView
+                        android:text="An amazing place, will return!"
+                        android:overScrollMode="ifContentScrolls"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" android:id="@+id/cardDescription"
+                        android:textSize="14sp"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginBottom="32dp"
+                        android:layout_marginStart="8dp"/>
             </LinearLayout>
 
-            <TextView
-                    android:text="An amazing place, will return!"
-                    android:overScrollMode="ifContentScrolls"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content" android:id="@+id/cardDescription"
-                    android:textSize="14sp"
-                    android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_marginBottom="32dp" app:layout_constraintStart_toEndOf="@+id/cardImageView"
-                    android:layout_marginStart="8dp"/>
-
-            <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_visibility"
-                    android:id="@+id/photosLink"
-                    android:layout_marginTop="40dp"
-                    app:layout_constraintTop_toBottomOf="@+id/cardDescription"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:tint="#527A3C" app:layout_constraintStart_toEndOf="@+id/cardImageView"
-                    android:layout_marginStart="8dp"/>
-            <ImageView
-                    android:layout_width="28dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/ic_arrow_down"
-                    android:id="@+id/imageDownVote"
-                    android:layout_marginTop="40dp"
-                    app:layout_constraintTop_toBottomOf="@+id/cardDescription"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="285dp"
-                    app:layout_constraintEnd_toStartOf="@+id/textfoundNotUseful"
-                    android:layout_marginEnd="31dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:tint="#527A3C"
-            />
-            <TextView
-                    android:text="0"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:id="@+id/textDownvote"
-                    tools:text="19"
-                    android:textSize="8sp"
-                    app:layout_constraintStart_toEndOf="@+id/imageDowvote"
-                    android:layout_marginEnd="16dp"
-                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="21dp"
-                    app:layout_constraintTop_toBottomOf="@+id/cardDescription" android:layout_marginStart="8dp"/>
-            <TextView
-                    android:text="0"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:id="@+id/textUpvote"
-                    app:layout_constraintStart_toEndOf="@+id/imageDownVote"
-                    android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/imageDowvote"
-                    android:layout_marginEnd="8dp"
-                    app:layout_constraintHorizontal_bias="0.333"
-                    tools:text="203" android:textSize="8sp" android:layout_marginTop="36dp"
-                    app:layout_constraintTop_toBottomOf="@+id/cardDescription" android:layout_marginBottom="17dp"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
-            <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="21dp"
-                    android:src="@drawable/ic_arrow_up"
-                    android:id="@+id/imageDowvote"
-                    android:layout_marginTop="40dp"
-                    app:layout_constraintTop_toBottomOf="@+id/cardDescription"
-                    android:layout_marginStart="31dp"
-                    app:layout_constraintStart_toEndOf="@+id/imageDownVote"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="47dp"
-                    android:tint="@color/colorAccent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
